--- a/src/pages/create-user-page/create-user-page.html
+++ b/src/pages/create-user-page/create-user-page.html
@@ -52,5 +52,9 @@
  <button (click)="GetPicture()" ion-button full>Get Picture</button>
 </ion-item>
  
+<ion-item>
+ <button ion-button color="secondary" (click)="CreateUser()" ion-button full>Create User</button>
+</ion-item>
+ 
 
 </ion-content>
