--- a/src/pages/create-user-page/create-user-page.html
+++ b/src/pages/create-user-page/create-user-page.html
@@ -34,12 +34,12 @@
 
    <ion-item>
     <ion-label color="primary" floating>Password</ion-label>
-    <ion-input (keyup)="onKey($event)" [(ngModel)]="password" type="password"></ion-input>
+    <ion-input [(ngModel)]="password" type="password"></ion-input>
   </ion-item>
 
      <ion-item>
     <ion-label color="primary" floating>Confirm Password</ion-label>
-    <ion-input (keyup)="onKey($event)" [(ngModel)]="confirmpassword" type="password"></ion-input>
+    <ion-input [(ngModel)]="confirmpassword" type="password"></ion-input>
   </ion-item>
 
 <ion-item>
